@@ -373,5 +373,14 @@ new Test.Unit.Runner({
     var b = $('dupContainer').down('#dupL4');
     
     this.assertEqual(a, b);
+  },
+  
+  testSelectorNotInsertedNodes: function() {
+    var wrapper = new Element("div");
+    wrapper.update("<table><tr><td id='myTD'></td></tr></table>");
+    new Selector('[id=myTD]').findElements(wrapper);
+    this.assertNotNullOrUndefined(wrapper.select('[id=myTD]')[0]);
+    this.assertNotNullOrUndefined(wrapper.select('td')[0]);
+    this.assertNotNullOrUndefined(wrapper.select('#myTD')[0]);
   }
 });
